@@ -14,6 +14,7 @@
 			if (e.name != 'allbox' &&
 			    e.name != 'groupexclude' &&
 			    e.name != 'original' &&
+			    e.name != 'duplicate' &&
 			    e.name != 'copy'
 			)
 				e.checked = document.page.allbox.checked;
@@ -38,13 +39,13 @@
 	function prints()
 	{
 		var add = "";
-		if(document.page.original.checked && document.page.copy.checked)
-			add = "";
-		else if(document.page.original.checked && !document.page.copy.checked)
-			add = "&which={/literal}{t}ORIGINAL{/t}{literal}";
-		else if(!document.page.original.checked && document.page.copy.checked)
-			add = "&which={/literal}{t}COPY{/t}{literal}";
-
+    		if(document.page.original.checked)
+	        	add = "&original=1";
+		if(document.page.copy.checked)
+			add += "&copy=1";
+		if(document.page.duplicate.checked)
+			add += "&duplicate=1";
+														       
 		document.page.action="?m=invoice&print=cached" + add;
 		document.page.target="_blank";
 		document.page.submit();
@@ -202,8 +203,9 @@
 					<TD ALIGN="left">
 						<NOBR><A HREF="javascript:pays();">{t}Check/Uncheck as accounted{/t} <IMG SRC="img/pay.gif" ALT=""></A></NOBR>&nbsp;
 						<NOBR><A HREF="javascript:prints();">{t}Print{/t} <IMG SRC="img/print.gif" ALT="" ></A></NOBR>&nbsp;
-						<INPUT type="checkbox" class="box dark" name="original"> {t}original{/t}&nbsp;
-						<INPUT type="checkbox" class="box dark" name="copy"> {t}copy{/t}
+						<INPUT type="checkbox" class="box dark" name="original" checked> {t}original{/t}&nbsp;
+						<INPUT type="checkbox" class="box dark" name="copy" checked> {t}copy{/t}
+						<INPUT type="checkbox" class="box dark" name="duplicate"> {t}duplicate{/t}
 					</TD>
 					<TD ALIGN="right">	
 						<NOBR><A HREF="javascript:CheckAll2();">{t}Check All{/t}</A><INPUT class="box dark" TYPE="checkbox" NAME="allbox" onClick="CheckAll();" VALUE="Check All Boxes"></NOBR>
