@@ -532,26 +532,30 @@ if($_GET['print'] == 'cached')
 	}
 
 	sort($ids);
-	$which = ($_GET['which'] != '' ? $_GET['which'] : trans('ORIGINAL+COPY'));
-	$count = (strstr($which,'+') ? sizeof($ids)*2 : sizeof($ids));
+
+	if($_GET['original']) $which[] = trans('ORIGINAL');
+        if($_GET['copy']) $which[] = trans('COPY');
+        if($_GET['duplicate']) $which[] = trans('DUPLICATE');
+	
+	if(!sizeof($which)) $which[] = trans('ORIGINAL');
+	
+	$count = sizeof($ids) * sizeof($which);
 	$i=0;
 
 	foreach($ids as $idx => $invoiceid)
 	{
 		$invoice = $LMS->GetInvoiceContent($invoiceid);
 		$invoice['serviceaddr'] = $LMS->GetCustomerServiceAddress($invoice['customerid']);
-		foreach(split('\+', $which) as $type)
+		foreach($which as $type)
 		{
 			$i++;
-			if($i == $count) $invoice['last'] = 1;
+			if($i == $count) $invoice['last'] = TRUE;
 			invoice_body();
 		}
 	}
 }
 elseif($_GET['fetchallinvoices'])
 {
-	$which = ($_GET['which'] != '' ? $_GET['which'] : trans('ORIGINAL+COPY'));
-	
 	$ids = $DB->GetCol('SELECT id FROM documents
 				WHERE cdate > ? AND cdate < ? AND type = 1'
 				.($_GET['customerid'] ? ' AND customerid = '.$_GET['customerid'] : '')
@@ -563,17 +567,23 @@ elseif($_GET['fetchallinvoices'])
 		die;
 	}
 
-	$count = (strstr($which,'+') ? sizeof($ids)*2 : sizeof($ids));
+	if($_GET['original']) $which[] = trans('ORIGINAL');
+        if($_GET['copy']) $which[] = trans('COPY');
+        if($_GET['duplicate']) $which[] = trans('DUPLICATE');
+	
+	if(!sizeof($which)) $which[] = trans('ORIGINAL');
+	
+	$count = sizeof($ids) * sizeof($which);
 	$i=0;
 
 	foreach($ids as $idx => $invoiceid)
 	{
 		$invoice = $LMS->GetInvoiceContent($invoiceid);
 		$invoice['serviceaddr'] = $LMS->GetCustomerServiceAddress($invoice['customerid']);
-		foreach(split('\+', $which) as $type)
+		foreach($which as $type)
 		{
 			$i++;
-			if($i == $count) $invoice['last'] = 1;
+			if($i == $count) $invoice['last'] = TRUE;
 			invoice_body();
 		}
 	}
@@ -585,7 +595,6 @@ elseif($_GET['fetchsingle'])
 	$invoice['serviceaddr'] = $LMS->GetCustomerServiceAddress($invoice['customerid']);
 	$type = trans('ORIGINAL');
 	invoice_body();
-
 }
 elseif($invoice = $LMS->GetInvoiceContent($_GET['id']))
 {
